src/test/resources/rules/success/CustomImportOrderCheck.java
package rules.success;

import java.util.Date;
import java.util.List;

public class CustomImportOrderCheck {
    public void printDate() {
        Date date = new Date();
        date.hashCode();
        List<String> list = null;
        list.stream();
    }
}
